--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,7 +3,7 @@
   box-sizing: border-box
   box-shadow: none
   outline: none
-  padding: 0.218rem 2.062rem
+  padding: 0.7rem 1.93rem
   border-radius: 22px
   &:hover
     cursor: pointer
@@ -13,7 +13,6 @@
     border: 2px solid $primary
     box-shadow: none
     font-weight: 600
-    line-height: 37.33px
     transition: 0.5s
     &:hover
       border: 2px solid $primary
@@ -22,16 +21,16 @@
   &--light
     color: $primary
     background-color: $light
-    border: none
+    border: 2px solid $light
     box-shadow: none
     font-weight: 600
-    line-height: 37.33px
     border-radius: 25px
     transition: 0.5s
-    padding: 0.5rem 4em
+    padding: 0.9rem 4rem
     &:hover
-      background: $light
-      color: $primary
+      background: transparent
+      color: $light
+      border: 2px solid $light
   &__link
     color: $light
     &:hover
