--- a/sass/templates/_avantage.sass
+++ b/sass/templates/_avantage.sass
@@ -1,18 +1,22 @@
 .avantage
+  &__row
+    align-items: baseline
+    margin: 0 4rem
+  &__col-30
+    margin-bottom: 2rem
   &__title
     margin-top: 5rem
     margin-bottom: 2rem
   &__description
     max-width: 49.81rem
     margin: auto
-    margin-bottom: 4rem
+    margin-bottom: 3.5rem
   &__card
     display: flex
     flex-direction: column
     align-items: center
     justify-content: start
     height: 182px
-    margin-bottom: 5rem
     &-title
       display: block
       color: $dark
@@ -25,9 +29,7 @@
       font-weight: 300
       line-height: 1.375rem
       text-align: center
-      max-width: 18rem
+      max-width: 19rem
     &-image
-      width: 40px
-      height: 40px
       margin-bottom: 1rem
       
