--- a/sass/templates/_services.sass
+++ b/sass/templates/_services.sass
@@ -4,15 +4,18 @@
   justify-content: start
   flex-wrap: wrap
   margin: auto
+  margin-left: 4rem
 .col-30__services
   flex-basis: 30%
+  margin-bottom: 2rem
+  margin-right: 2rem
 .services
   background: $light url('../img/services/services-bg.png') no-repeat center
-  padding-bottom: 14.43rem
+  padding-bottom: 12rem
   &__title
     margin-bottom: 1.68rem
   &__description
-    max-width: 49rem
+    width: 65%
     text-align: center
     margin: auto
     color: $dark
@@ -23,12 +26,9 @@
     background: $light
     border-radius: 5px
     border: 1px solid #c9c8c8
-    width: 22.18rem
-    height: 19.37rem
-    padding: 36px 35px
-    margin-bottom: 2.3rem
-    margin-left: 2rem
-    margin-right: 2rem
+    width: 94%
+    min-height: 19.37rem
+    padding: 2rem 2rem
     &:hover
       cursor: pointer
       border-bottom: 5px solid $primary
@@ -43,3 +43,5 @@
     &-text
       font-weight: 300
       line-height: 1.583rem
+    &-image
+      margin-top: 0.8rem
