--- a/sass/templates/_statistics.sass
+++ b/sass/templates/_statistics.sass
@@ -8,11 +8,11 @@
     display: flex
     justify-content: space-between
     align-items: center
-    margin-left: 3rem
-    margin-top: -9.3rem
-    padding: 7rem 2rem
-    width: 73.06rem
-    max-width: 80%
+    left: 50%
+    margin-left: -31%
+    margin-top: -7.62rem
+    padding: 6rem 4rem
+    width: 61%
     min-height: 20.18rem
     background: $light url('../img/statistics/bg.png') no-repeat center
     box-shadow: 0 0 22px 5px rgba(34, 34, 34, 0.05)
@@ -30,9 +30,16 @@
       font-weight: 700
       line-height: 2.33rem
       text-align: center
-.video
-  position: relative
-  &__play
-    position: absolute
-    margin-top: 17%
-    margin-left: 46%
+  &__video
+    position: relative
+    &__play
+      position: absolute
+      left: 50%
+      margin-left: -60px
+      margin-top: 19.78rem
+      &__mobile
+        display: none
+        position: absolute
+        left: 50%
+        margin-left: -33px
+        margin-top: 18rem
