--- a/sass/templates/_feedback.sass
+++ b/sass/templates/_feedback.sass
@@ -1,14 +1,18 @@
 .feedback
-  background: $light url('../img/form-bg.jpg') no-repeat center / cover
-  padding-top: 6.4rem
+  background: $light url('../img/form-bg.jpg') no-repeat top left
+  padding-top: 5.4rem
   padding-bottom: 6.4rem
+  &__container
+    width: 67%
+    margin: auto
   &__title
     color: $secondary
     width: 29.43rem
     font-size: 2.25rem
     font-weight: 700
-    line-height: 3.66rem
-    margin-bottom: 3.06rem
+    line-height: 2.8rem
+    margin-left: 3.5rem
+    margin-bottom: 2.7rem
   &__link
     color: $primary
     position: relative
@@ -21,19 +25,24 @@
       bottom: 0
       right: 0
   &__description
+    margin-left: 3.5rem
     display: flex
-    color: $secondary
-    font-size: 1.125rem
-    font-weight: 300
-    line-height: 0.958rem
     &__item
       margin-right: 2.375rem
+      line-height: 2rem
+      color: $secondary
+      font-size: 1.125rem
+      font-weight: 300
     &__link
       color: $secondary
   &__strong
     font-size: 1.5rem
     font-weight: 600
     line-height: 2.33rem
+  &__medium
+    font-size: 1.125rem
+    font-weight: 600
+    line-height: 1.375rem
   &__form
     display: flex
     flex-direction: column
@@ -42,6 +51,8 @@
     flex-wrap: wrap
     width: 90%
     height: 100%
+    margin-top: 1.4rem
+    margin-left: -0.5rem
     &__button
       margin-top: 1.3rem
   &__label
@@ -51,7 +62,7 @@
     font-size: 1.125rem
     font-weight: 300
     line-height: 1.17rem
-    margin-bottom: 0.875rem
+    margin-bottom: 0.6rem
   &__input
     width: 100%
     padding-bottom: 5px
@@ -66,7 +77,7 @@
   &__input-group
     position: relative
     width: 100%
-    margin-bottom: 1.56rem
+    margin-bottom: 1.18rem
 ef
   position: absolute
   color: $dark
