--- a/sass/templates/_prices.sass
+++ b/sass/templates/_prices.sass
@@ -7,17 +7,17 @@
     height: 37.31rem
     margin: auto
     background: $light url('../img/prices/form-img.png') no-repeat top right / contain
-    padding-top: 5.43rem
-    padding-bottom: 5.43rem
+    padding-top: 5rem
     padding-left: 3.25rem
   &__title
+    width: 50%
     color: $dark
     font-size: 1.875rem
     font-weight: 700
     line-height: 2.187rem
+    text-align: center
     margin: 0
-    margin-left: 10rem
-    margin-bottom: 3rem
+    margin-bottom: 2.2rem
   &__form
     display: flex
     flex-direction: column
@@ -27,7 +27,11 @@
     width: 50%
     height: 80%
     &__button
-      margin: 0 auto
+      align-self: center
+      margin-top: 2rem
+      margin-bottom: 3.5rem
+      padding: 0.8rem 2.6rem
+      border-radius: 36px
   &__label
     display: block
     color: $third
@@ -35,7 +39,7 @@
     font-size: 1.125rem
     font-weight: 300
     line-height: 1.17rem
-    margin-bottom: 0.875rem
+    margin-bottom: 0.7rem
   &__input
     width: 100%
     padding-bottom: 5px
@@ -50,6 +54,7 @@
   &__input-group
     position: relative
     width: 100%
+    margin-bottom: 0.2rem
 ep
   position: absolute
   color: tomato
