feat: add modal dialog & button-up

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -35,5 +35,15 @@
     color: $light
     &:hover
       color: $primary
+.upbutton
+  display: none
+  background: url('../img/up.png') no-repeat top left
+  height: 60px
+  width: 60px
+  bottom: 30px
+  right: 30px
+  cursor: pointer
+  position: fixed
+  z-index: 999
       
       
