--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,6 @@
 @import 'templates/prices'
 @import 'templates/feedback'
 @import 'templates/footer'
+@import 'templates/modal'
 @import 'templates/modalsuccess'
 @import 'media'
