feat: add section Cases

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,7 @@
 @import 'templates/avantage'
 @import 'templates/services'
 @import 'templates/prices'
+@import 'templates/cases'
 @import 'templates/feedback'
 @import 'templates/footer'
 @import 'templates/modal'
