--- a/sass/templates/_statistics.sass
+++ b/sass/templates/_statistics.sass
@@ -37,6 +37,8 @@
       left: 50%
       margin-left: -60px
       margin-top: 19.78rem
+      &:hover
+        cursor: pointer
       &__mobile
         display: none
         position: absolute
