--- a/css/style.css
+++ b/css/style.css
@@ -591,6 +591,8 @@ header {
       left: 50%;
       margin-left: -60px;
       margin-top: 19.78rem; }
+      .statistics__video__play:hover {
+        cursor: pointer; }
       .statistics__video__play__mobile {
         display: none;
         position: absolute;
@@ -770,6 +772,100 @@ ep {
   font-size: 0.8rem;
   bottom: 0;
   right: 0; }
+
+.cases {
+  padding-top: 4.9rem;
+  padding-bottom: 4.56rem; }
+  .cases__description {
+    width: 65%;
+    text-align: center;
+    margin: auto;
+    color: #2c2c2d;
+    font-weight: 400;
+    line-height: 1.375rem;
+    margin-bottom: 3.56rem; }
+  .cases__row {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-wrap: wrap;
+    width: 62.25rem;
+    height: 31.62rem;
+    background: #fff url("../img/cases/cases-bg.png") no-repeat top left;
+    box-shadow: 0 0 10px 3px rgba(34, 34, 34, 0.05);
+    color: #2c2c2d;
+    margin: auto;
+    padding-top: 1.8rem;
+    padding-left: 2.18rem;
+    padding-right: 2.18rem; }
+  .cases__button {
+    margin: auto;
+    margin-top: 2.5rem;
+    width: 13.6rem;
+    text-align: center;
+    padding: 1rem 4 rem;
+    border-radius: 35rem; }
+  .cases__ul {
+    -webkit-margin-before: 0;
+    margin-block-start: 0;
+    -webkit-margin-after: 0;
+    margin-block-end: 0;
+    -webkit-padding-start: 0;
+    padding-inline-start: 0; }
+  .cases__list {
+    list-style-type: none; }
+    .cases__list::before {
+      content: url("../img/cases/li.png");
+      margin-right: 4px; }
+
+.swiper-button-prev, .swiper-button-next {
+  width: 23px;
+  height: 43px; }
+  .swiper-button-prev::after, .swiper-button-next::after {
+    display: none; }
+
+.swiper-button-prev {
+  left: 70px;
+  background: url("../img/arrow-prev.svg") no-repeat center; }
+
+.swiper-button-next {
+  background: url("../img/arrow-next.svg") no-repeat center;
+  left: auto;
+  right: 70px; }
+
+.slide__title {
+  flex-basis: 100%;
+  text-align: center;
+  font-size: 1.375rem;
+  font-weight: 500;
+  line-height: 1.375rem;
+  -webkit-margin-after: 0;
+  margin-block-end: 0;
+  -webkit-margin-before: 0;
+  margin-block-start: 0; }
+
+.slide__text {
+  line-height: 1.75rem;
+  margin-bottom: 1.8rem; }
+  .slide__text--green {
+    color: #47a536;
+    font-weight: 700;
+    line-height: 1.75rem; }
+
+.slide__link {
+  text-decoration: none;
+  color: #2c2c2d; }
+
+.shedule__title {
+  width: 25rem;
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: 1.375rem; }
+
+.shedule__text {
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: #38393b; }
 
 .feedback {
   background: #fff url("../img/form-bg.jpg") no-repeat top left;
@@ -1062,8 +1158,12 @@ em {
 @media screen and (max-width: 1880px) {
   .container {
     width: 80%; }
-  .feedback__container {
-    width: 80%; } }
+  .feedback {
+    background: #fff url("../img/form-bg.jpg") no-repeat center/cover;
+    padding-top: 5.4rem;
+    padding-bottom: 3rem; }
+    .feedback__container {
+      width: 80%; } }
 
 @media screen and (max-width: 1600px) {
   .container {
