--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -2,6 +2,9 @@
   .container
     width: 80%
   .feedback
+    background: $light url('../img/form-bg.jpg') no-repeat center / cover
+    padding-top: 5.4rem
+    padding-bottom: 3rem
     &__container
       width: 80%
 @media screen and ( max-width: 1600px )
