--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -29,6 +29,24 @@ img
     text-align: center
 p
   margin: 0
+.swiper
+  &-button                                   
+    &-prev, &-next
+      width: 23px
+      height: 43px
+      &::after
+        display: none
+    &-prev
+      left: 70px
+      background: url('../img/arrow-prev.svg') no-repeat center
+    &-next
+      background: url('../img/arrow-next.svg') no-repeat center
+      left: auto
+      right: 70px
+h2 
+  font-weight: 700
+  margin-block-start: 0
+  margin-block-end: 0
 
 
 
