--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'templates/services'
 @import 'templates/prices'
 @import 'templates/cases'
+@import 'templates/review'
 @import 'templates/feedback'
 @import 'templates/footer'
 @import 'templates/modal'
