--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,28 @@ img {
 p {
   margin: 0; }
 
+.swiper-button-prev, .swiper-button-next {
+  width: 23px;
+  height: 43px; }
+  .swiper-button-prev::after, .swiper-button-next::after {
+    display: none; }
+
+.swiper-button-prev {
+  left: 70px;
+  background: url("../img/arrow-prev.svg") no-repeat center; }
+
+.swiper-button-next {
+  background: url("../img/arrow-next.svg") no-repeat center;
+  left: auto;
+  right: 70px; }
+
+h2 {
+  font-weight: 700;
+  -webkit-margin-before: 0;
+  margin-block-start: 0;
+  -webkit-margin-after: 0;
+  margin-block-end: 0; }
+
 header {
   position: fixed;
   left: 0;
@@ -775,7 +797,10 @@ ep {
 
 .cases {
   padding-top: 4.9rem;
-  padding-bottom: 4.56rem; }
+  padding-bottom: 2.3rem; }
+  .cases__title {
+    margin-top: 2rem;
+    margin-bottom: 1.77rem; }
   .cases__description {
     width: 65%;
     text-align: center;
@@ -817,44 +842,26 @@ ep {
     .cases__list::before {
       content: url("../img/cases/li.png");
       margin-right: 4px; }
-
-.swiper-button-prev, .swiper-button-next {
-  width: 23px;
-  height: 43px; }
-  .swiper-button-prev::after, .swiper-button-next::after {
-    display: none; }
-
-.swiper-button-prev {
-  left: 70px;
-  background: url("../img/arrow-prev.svg") no-repeat center; }
-
-.swiper-button-next {
-  background: url("../img/arrow-next.svg") no-repeat center;
-  left: auto;
-  right: 70px; }
-
-.slide__title {
-  flex-basis: 100%;
-  text-align: center;
-  font-size: 1.375rem;
-  font-weight: 500;
-  line-height: 1.375rem;
-  -webkit-margin-after: 0;
-  margin-block-end: 0;
-  -webkit-margin-before: 0;
-  margin-block-start: 0; }
-
-.slide__text {
-  line-height: 1.75rem;
-  margin-bottom: 1.8rem; }
-  .slide__text--green {
-    color: #47a536;
-    font-weight: 700;
-    line-height: 1.75rem; }
-
-.slide__link {
-  text-decoration: none;
-  color: #2c2c2d; }
+  .cases__slide__title {
+    flex-basis: 100%;
+    text-align: center;
+    font-size: 1.375rem;
+    font-weight: 500;
+    line-height: 1.375rem;
+    -webkit-margin-after: 0;
+    margin-block-end: 0;
+    -webkit-margin-before: 0;
+    margin-block-start: 0; }
+  .cases__slide__text {
+    line-height: 1.75rem;
+    margin-bottom: 1.8rem; }
+    .cases__slide__text--green {
+      color: #47a536;
+      font-weight: 700;
+      line-height: 1.75rem; }
+  .cases__slide__link {
+    text-decoration: none;
+    color: #2c2c2d; }
 
 .shedule__title {
   width: 25rem;
@@ -866,6 +873,64 @@ ep {
   font-size: 0.875rem;
   font-weight: 400;
   color: #38393b; }
+
+.review {
+  background: #fff url("../img/review/review-bg.png") no-repeat center left;
+  padding-bottom: 5rem; }
+  .review__title {
+    margin-top: 2.5rem;
+    margin-bottom: 1.77rem; }
+  .review__description {
+    width: 65%;
+    text-align: center;
+    margin: auto;
+    color: #2c2c2d;
+    font-weight: 400;
+    line-height: 1.375rem;
+    margin-bottom: 3.56rem; }
+  .review__row {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-wrap: wrap;
+    width: 58.18rem;
+    min-height: 16.75rem;
+    background: transparent;
+    color: #38393b;
+    margin: auto;
+    padding-top: 1.8rem;
+    padding-left: 2.18rem;
+    padding-right: 2.18rem; }
+  .review__text {
+    text-align: center;
+    font-size: 1.375rem;
+    font-weight: 300;
+    line-height: 2.18rem;
+    margin-bottom: 2.31rem; }
+  .review__card {
+    display: flex;
+    align-items: center; }
+    .review__card__img {
+      margin-right: 1rem; }
+    .review__card__name {
+      color: #323232;
+      font-size: 1.125rem;
+      font-weight: 700;
+      line-height: 2.18rem; }
+    .review__card__position {
+      color: #38393b; }
+  .review__swiper-button-prev, .review__swiper-button-next {
+    width: 23px;
+    height: 43px; }
+    .review__swiper-button-prev::after, .review__swiper-button-next::after {
+      display: none; }
+  .review__swiper-button-prev {
+    left: 100px;
+    background: url("../img/arrow-prev.svg") no-repeat center; }
+  .review__swiper-button-next {
+    background: url("../img/arrow-next.svg") no-repeat center;
+    left: auto;
+    right: 100px; }
 
 .feedback {
   background: #fff url("../img/form-bg.jpg") no-repeat top left;
@@ -1269,7 +1334,13 @@ em {
       padding: 0 1rem; }
     .feedback__form {
       width: 100%;
-      padding: 5rem; } }
+      padding: 5rem; }
+  .cases__row {
+    width: 70%;
+    height: 100%; }
+  .review__row {
+    width: 70%;
+    height: 100%; } }
 
 @media screen and (max-width: 760px) {
   .container {
@@ -1310,7 +1381,21 @@ em {
       margin-top: 30%; }
   .services__card {
     margin-left: 0;
-    margin-right: 0; } }
+    margin-right: 0; }
+  .cases__row {
+    width: 60%; }
+  .swiper-button-prev, .swiper-button-next {
+    width: 23px;
+    height: 43px; }
+    .swiper-button-prev::after, .swiper-button-next::after {
+      display: none; }
+  .swiper-button-prev {
+    left: 10px;
+    background: url("../img/arrow-prev.svg") no-repeat center; }
+  .swiper-button-next {
+    background: url("../img/arrow-next.svg") no-repeat center;
+    left: auto;
+    right: 10px; } }
 
 @media screen and (max-width: 570px) {
   .contacts__phone {
