--- a/sass/templates/_services.sass
+++ b/sass/templates/_services.sass
@@ -7,12 +7,13 @@
   margin-left: 4rem
 .col-30__services
   flex-basis: 30%
-  margin-bottom: 2rem
-  margin-right: 2rem
+  margin-bottom: 2.3rem
+  margin-right: 2.3rem
 .services
   background: $light url('../img/services/services-bg.png') no-repeat center
   padding-bottom: 12rem
   &__title
+    margin-top: 1.7rem
     margin-bottom: 1.68rem
   &__description
     width: 65%
@@ -26,7 +27,7 @@
     background: $light
     border-radius: 5px
     border: 1px solid #c9c8c8
-    width: 94%
+    width: 97%
     min-height: 19.37rem
     padding: 2rem 2rem
     &:hover
