--- a/sass/templates/_statistics.sass
+++ b/sass/templates/_statistics.sass
@@ -1,7 +1,7 @@
 .statistics
   position: relative
   width: 100%
-  min-height: 39.56rem
+  height: 39.56rem
   background: $light url('../img/statistics/video-bg.jpg') no-repeat center / cover
   &__description
     position: absolute
