--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,6 +12,7 @@
 @import 'templates/prices'
 @import 'templates/cases'
 @import 'templates/review'
+@import 'templates/news'
 @import 'templates/feedback'
 @import 'templates/footer'
 @import 'templates/modal'
