--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -29,6 +29,8 @@
     line-height: 1.75rem
     padding-bottom: 1.3rem
   &__button
+    margin-top: 1rem
+    margin-left: 0.3rem
     padding: 0.8rem 2.5rem
     border-radius: 25px
   &__social
